[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/PCamera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="PCamera" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="phaseInfo" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 840.0
margin_top = 569.0
margin_right = 988.0
margin_bottom = 588.0
text = "PHASE: SELECT"

[node name="endTurnButton" type="Button" parent="CanvasLayer"]
margin_left = 694.0
margin_top = 544.0
margin_right = 832.0
margin_bottom = 591.0
text = "END TURN"

[node name="playerInfo" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 840.0
margin_top = 546.0
margin_right = 964.0
margin_bottom = 564.0
text = "PLAYER: 1"

[node name="playerSwapButton" type="Button" parent="CanvasLayer"]
margin_left = 590.0
margin_top = 542.0
margin_right = 689.0
margin_bottom = 590.0
text = "SWAP PLAYER"

[node name="inGameInfo" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="showFogButton" type="Button" parent="CanvasLayer/inGameInfo"]
margin_left = 447.0
margin_top = 542.0
margin_right = 585.0
margin_bottom = 565.0
text = "SHOW FOG"

[node name="hideFogButton" type="Button" parent="CanvasLayer/inGameInfo"]
margin_left = 449.0
margin_top = 568.0
margin_right = 586.0
margin_bottom = 588.0
text = "HIDE FOG"

[node name="selectInfo" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2( 53, 536 )

[connection signal="button_up" from="CanvasLayer/endTurnButton" to="." method="_on_endTurnButton_button_up"]
[connection signal="button_up" from="CanvasLayer/playerSwapButton" to="." method="_on_playerSwapButton_button_up"]
[connection signal="button_up" from="CanvasLayer/inGameInfo/showFogButton" to="." method="_on_showFogButton_button_up"]
[connection signal="button_up" from="CanvasLayer/inGameInfo/hideFogButton" to="." method="_on_hideFogButton_button_up"]
